feat: autogenerate and publish example docs